--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,13 @@
 # in the templates via {{ site.myvariable }}.
 title: sammochen
 email: samuelshchen@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  a casual coding relationship
+description: sam's projects and side hustles
 baseurl: "" # the subpath of your site, e.g. /blog
-url: 
+url: http://sammochen.github.io/
 github_username:  sammochen
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
-plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
